--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="search">Search</string>
     <string name="no_internet_connection">No internet connection</string>
     <string name="restart_activity">Refresh</string>
+
+
+    <string name="google_maps_key">AIzaSyAHNS78oigkZd5E4NMmvvqsP5RzqHzF_Qw</string>
 </resources>
